# Spaceballs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  spaceball.safetensors
pages/: index.html  main.js
public/: index.html
src/: actions.rs  ai.rs  character.rs  characters.rs  collisions.rs  controls.rs  easter.rs  guns.rs  health.rs  js_interop.rs  lib.rs  main.rs  movement.rs  multiplayer.rs  physics.rs  projectiles.rs  scenes.rs  team.rs  teams.rs  ui.rs
src/guns/: additives.rs  colours.rs  presets.rs  stats.rs
src/network/: controls.rs  ggrs_config.rs  mod.rs  peers.rs  players.rs  session.rs  socket.rs
src/ui/: chat.rs  clipboard_util.rs  color_interaction.rs  focus.rs  hud.rs  input_consumption.rs  lobby.rs  menu.rs  menu_builder.rs  mod.rs  score.rs  text_input.rs  user_settings.rs
web/: index.html  main.ts  package-lock.json  package.json  tsconfig.json
