[package]
name = "cosmic_spaceball_tactical_action_arena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(any(target_arch = "wasm32", target_os = "windows")))'.dependencies]
bevy = {features = ["dynamic"], version = "0.8"}

[dependencies]
bevy = "0.8"
heron = { version = "4", features = ["2d", "enhanced-determinism"] }
rand = "0.7.3"
console_error_panic_hook = "0.1"
wasm-bindgen = "*"

[profile.release]
opt-level = 's'
lto = 'thin'

[profile.dev]
opt-level = 3
