[package]
name = "cosmic-spaceball-tactical-action-arena"
description = "High-concept, extremely fun and varied in level selection arcade to keep you and yer friends entertained for days/minutes of high-hell action! It's COSMIC SPACEBALL TACTICAL ACTION ARENA!"
version = "0.1.0"
edition = "2021"

[target.'cfg(not(any(target_arch = "wasm32", target_os = "windows")))'.dependencies]
bevy = {version = "0.10", features = ["dynamic_linking"]}

[dependencies]
bevy = "0.10"
bevy_rapier2d = { version = "0.21.0", features = ["enhanced-determinism"]} # serde-serialize, debug-render
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
clap = { version = "4", features = ["derive"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "*"

[profile.release]
opt-level = 's'
lto = 'thin'
codegen-units = 1

[profile.dev]
opt-level = 3
